--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ if (sponsorParam) {
 }
 
 const jsonUrl = 'https://nav.savefamily.net/api/';
+const redirectUrl = 'https://statistics.savefamily.net/redirect?target=';
 
 fetch(jsonUrl)
   .then(response => response.json())
@@ -48,7 +49,7 @@ fetch(jsonUrl)
           div.innerHTML = innerHTML;
 
           const link = document.createElement('a');
-          link.href = `https://influx.simai.life/api?redirect=${item.url}?metric=NFC%26keyword=nav%26target=${item.name}`;
+          link.href = `${redirectUrl}${item.url}?metric=NFC%26keyword=nav%26name=${item.name}`;
           link.appendChild(div);
 
           container.appendChild(link);
@@ -72,7 +73,7 @@ fetch(jsonUrl)
       div.innerHTML = innerHTML;
 
       const link = document.createElement('a');
-      link.href = `https://influx.simai.life/api?redirect=${item.url}?metric=NFC%26keyword=nav%26target=${item.name}`;
+      link.href = `${redirectUrl}${item.url}?metric=NFC%26keyword=nav%26title=${item.name}`;
       link.appendChild(div);
 
       container.appendChild(link);
