--- a/yage.html
+++ b/yage.html
@@ -28,7 +28,7 @@
                         divtest.innerHTML = "new div";
                         objTo.appendChild(divtest);
                     }
-                    const jsonUrl = 'http://x-resource.test/yage/'+album;
+                    const jsonUrl = 'https://resources.savefamily.net/yage/'+album;
                     fetch(jsonUrl)
                       .then(response => response.json())
                       .then(data => {
