--- a/yage.html
+++ b/yage.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://cdn.tailwindcss.com"></script>
         <title>Player</title>
     </head>
     <body>
         <div id="aplayer"></div>
-            <script src="https://cdn.jsdelivr.net/npm/aplayer@1.10.0/dist/APlayer.min.js"></script>
+            <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/aplayer/1.10.1/APlayer.min.js"></script>
             <script>
                 window.onload = function () {
                     const urlParams = new URLSearchParams(window.location.search);
@@ -45,7 +44,7 @@
                 }
 
             </script>
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
+            <link rel="stylesheet" href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/aplayer/1.10.1/APlayer.min.css">
             <style>
                 .prose ol > li::before {
                     content: '';
