--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ if (sponsorParam) {
 }
 
 const jsonUrl = 'https://nav.savefamily.net/api/';
-const redirectUrl = 'https://statistics.savefamily.net/redirect?target=';
+const redirectUrl = 'https://statistics.savefamily.net/redirect';
 
 fetch(jsonUrl)
   .then(response => response.json())
@@ -49,7 +49,7 @@ fetch(jsonUrl)
           div.innerHTML = innerHTML;
 
           const link = document.createElement('a');
-          link.href = `${redirectUrl}${item.url}?metric=NAV%26name=${item.name}`;
+          link.href = `${redirectUrl}${item.url}?metric=NAV%26name=`+ encodeURIComponent(item.name);
           link.appendChild(div);
 
           container.appendChild(link);
@@ -57,7 +57,7 @@ fetch(jsonUrl)
       });
       return;
     }
-    // default!
+    // default!èµ%C2%9Eç¾%C2%8E %E8%B5%9E%E7%BE%8E
     const items = data.data.tools.filter(item => item.hide === false);
     items.forEach(item => {
       const div = document.createElement('div');
@@ -73,7 +73,7 @@ fetch(jsonUrl)
       div.innerHTML = innerHTML;
 
       const link = document.createElement('a');
-      link.href = `${redirectUrl}${item.url}?metric=NAV%26title=${item.name}`;
+      link.href = `${redirectUrl}?metric=NAV&name=` + encodeURIComponent(item.name) + `&target=${item.url}`;
       link.appendChild(div);
 
       container.appendChild(link);
