--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ fetch(jsonUrl)
           div.innerHTML = innerHTML;
 
           const link = document.createElement('a');
-          link.href = `${redirectUrl}${item.url}?metric=NAV%26name=`+ encodeURIComponent(item.name);
+          link.href = `${redirectUrl}?metric=NAV&name=` + encodeURIComponent(item.name) + `&target=${item.url}`;
           link.appendChild(div);
 
           container.appendChild(link);
