add ly static a

--- a/ly.html
+++ b/ly.html
@@ -54,6 +54,16 @@ const staticData = {
         "hide": true
       },
       {
+        "id": 4,
+        "name": "良友随身听",
+        "url": "https://a1.zyqstx.net",
+        "logo": "https://images.simai.life/images/2024/09/a22fe2f4de3d5e4917d0b3b513862057.png",
+        "catelog": "赞美诗歌",
+        "desc": "良朋益友",
+        "sort": -5,
+        "hide": true
+      },
+      {
         "id": 27,
         "name": "同行频道",
         "url": "https://ly1.zyqstx.net/zh-sc/listen/channel/channel-tx",
