友音乐频道

--- a/ly.html
+++ b/ly.html
@@ -96,8 +96,8 @@ const staticData = {
       {
         "id": 30,
         "name": "友音乐频道",
-        "url": "https://r.lyapp2.net/song",
-        "logo": "https://images.simai.life/images/2024/09/a22fe2f4de3d5e4917d0b3b513862057.png",
+        "url": "https://ly1.zyqstx.net/zh-sc/platform/platform-you",
+        "logo": "https://images.simai.life/images/2024/09/0260e25480ff8bd7263d5896b6cec90d.png",
         "catelog": "赞美诗歌",
         "desc": "音乐频道",
         "sort": 1,
